# FlexKV

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
benchmarks/: benchmark_dist_kvcache.py  benchmark_kv_transfer.py  benchmark_single_batch.py  benchmark_workers.py  example_dist_config.yml  microbenchmark_ce_overhead.py  microbenchmark_ce_simulation.py  microbenchmark_ce_strategy.py  microbenchmark_ce_threshold.py  microbenchmark_notify_mode.py  run_dist_benchmark.sh
benchmarks/dist_benchmark/: benchmark_dist_direct.py  benchmark_dist_kvcache.py
benchmarks/nvcomp_benchmarks/: benchmark.sh  close_loop_multi_turn_client.py  swe-bench-multiturn-setup.py
csrc/: bindings.cpp  ce_transfer.cu  ce_transfer.h  layerwise.cpp  layerwise.h  tp_transfer_thread_group.cpp  tp_transfer_thread_group.h  transfer.cu  transfer.cuh  transfer_ssd.cpp
csrc/compression/ans/: ans_bindings.cpp  nvcomp_ans.cu  nvcomp_ans.cuh  nvcomp_ans_tp.cpp  nvcomp_ans_tp.h
csrc/compression/common/: common_bindings.cpp  packed_ssd.cpp  packed_ssd.h  staging_transfer.cuh  transfer_ssd_packed.cpp  transfer_ssd_packed.h
docs/eviction_policy/: README_en.md  README_zh.md
docs/flexkv_config_reference/: README_en.md  README_zh.md
flexkv/: __init__.py  kvmanager.py  kvtask.py  mooncakeEngineWrapper.py  transfer_manager.py
flexkv/cache/: cache_engine.py  hie_cache_engine.py  mempool.py  redis_meta.py
flexkv/common/: config.py  memory_handle.py  ring_buffer.py  transfer.py
flexkv/integration/: config.py
flexkv/integration/vllm/: vllm_v1_adapter.py
flexkv/server/: client.py  request.py  server.py
flexkv/storage/: allocator.py  storage_engine.py
flexkv/transfer/: layerwise.py  transfer_engine.py  worker.py  worker_op.py
flexkv/transfer/compression/: __init__.py  factory.py
flexkv/transfer/compression/ans/: __init__.py  ans_strategy.py  ans_utils.py
flexkv/transfer/compression/common/: __init__.py  size_table.py  strategy.py
tests/: test_batch_kvtask.py  test_cache_engine.py  test_kv_transfer_correctness.py  test_kvmanager.py  test_memory_handle.py  test_transfer_engine_atomic_eviction.py
tests/nvcomp/: nvcomp_common_utils.py  test_nvcomp_cpu.py  test_nvcomp_ssd.py
